--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -35,7 +35,7 @@
 .book-title {
     font-size: 1.8em;
     font-weight: bold;
-    color: #a30000;
+    color: #ffffff;
     text-shadow: 2px 2px 6px black;
     letter-spacing: 1px;
     margin-top: 10px;
