--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
+body {
+    background: url("../images/background2.webp") no-repeat center center fixed;
+    background-size: cover;
+}
 
 /* Adjust Hero Section to Fit Viewport */
 .hero {
@@ -57,4 +61,12 @@
 .hero-content .button:hover {
     background: #a30000;
     box-shadow: 0px 0px 12px rgba(255, 0, 0, 0.8);
+}
+
+@media (max-width: 768px) {
+    .hero {
+        width:100%;
+        
+        background-attachment: scroll; /* Override fixed attachment */
+    }
 }
