--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@ body {
 
 /* Adjust Hero Section to Fit Viewport */
 .hero {
-    background: url("../images/background.webp") no-repeat center center/cover;
+    background: url("/assets/images/background/background.webp") no-repeat center center/cover;
     min-height: 70vh; /* Ensures it fits within the screen */
     display: flex;
     align-items: center;
@@ -66,7 +66,7 @@ body {
 @media (max-width: 768px) {
     .hero {
         width:100%;
-        
+
         background-attachment: scroll; /* Override fixed attachment */
     }
 }
