--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html, body {
 /* Global Styles */
 body {
     height: 100vh;
-    background: url("../images/Background2.webp") no-repeat center center fixed;
+    background: url("/assets/images/background/Background2.webp") no-repeat center center fixed;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Cinzel Decorative', serif; /* Gothic-style font */
@@ -27,8 +27,6 @@ body {
     color: #c5c5c5; /* Soft grey */
     min-height: 100vh; /* Ensures the body always covers the entire viewport */
 }
-
-
 
 body::before {
     content: "";
