--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,11 +1,11 @@
 body {
-    background: url("../images/background/background2.webp") no-repeat center center fixed;
+    background: url("assets/images/background/background2.webp") no-repeat center center fixed;
     background-size: cover;
 }
 
 /* Adjust Hero Section to Fit Viewport */
 .hero {
-    background: url("images/background/background.webp") no-repeat center center/cover;
+    background: url("assets/images/background/background.webp") no-repeat center center/cover;
     min-height: 70vh; /* Ensures it fits within the screen */
     display: flex;
     align-items: center;
