--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html, body {
 /* Global Styles */
 body {
     height: 100vh;
-    background: url("/assets/images/background/Background2.webp") no-repeat center center fixed;
+    background: url("../images/background/Background2.webp") no-repeat center center fixed;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Cinzel Decorative', serif; /* Gothic-style font */
